--- a/scss/components/_layout.scss
+++ b/scss/components/_layout.scss
@@ -1086,7 +1086,6 @@
   margin-bottom: 0;
   border: 2px solid rgba($accent-color, 0.15);
   position: relative;
-  overflow: hidden;
 }
 
 .scs-card-badge {
